clean up jmh testing